# clipboard

./: README.md  pyproject.toml  vercel.json
api/: index.py  requirements.txt
backend/: .env.example  requirements.txt
backend/app/: main.py
backend/app/api/: routes_auth.py  routes_clipboard.py
backend/app/core/: auth.py  config.py  database.py
backend/app/models/: clipboard.py
frontend/: .env.example  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  config.ts  index.css  main.tsx  theme.ts  types.ts
frontend/src/api/: clipboard.ts
frontend/src/components/: AuthControls.tsx  ClipboardForm.tsx  ClipboardList.tsx
frontend/src/providers/: AuthProvider.tsx  authContext.ts  useAuth.ts
